--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.locations.ui.ui_activity.LoginFragment">
+    tools:context="com.example.arnavigationapp.ui.ui_activity.LoginFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
