--- a/app/src/main/res/layout/all_locations_layout.xml
+++ b/app/src/main/res/layout/all_locations_layout.xml
@@ -38,18 +38,17 @@
                     android:scaleType="centerCrop" />
 
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:id="@+id/btn_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_width="0dp"
+                android:layout_height="15dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="4dp"
-                app:drawableTint="@color/black"
                 android:textSize="20sp"
-                app:drawableStartCompat="@drawable/baseline_arrow_forward_ios_24"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:drawableStartCompat="@drawable/baseline_arrow_back_ios_24"
+                app:drawableTint="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/searchEditTextLayout"
@@ -65,7 +64,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/searchEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
