--- a/app/src/main/res/layout/location_item.xml
+++ b/app/src/main/res/layout/location_item.xml
@@ -19,6 +19,7 @@
             android:id="@+id/buildingImage"
             android:layout_width="120dp"
             android:layout_height="120dp"
+            android:padding="5dp"
             android:contentDescription="@string/location_image"
             android:src="@mipmap/ic_launcher"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -32,6 +33,8 @@
             android:layout_width="261dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:text="@string/coordinates"
             android:textSize="16sp"
             app:layout_constraintBaseline_toTopOf="parent"
@@ -44,6 +47,8 @@
             android:layout_height="21dp"
             android:layout_weight="1"
             android:text="@string/description"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:textSize="16sp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -58,6 +63,8 @@
             android:layout_height="23dp"
             android:layout_weight="1"
             android:text="@string/azimuth"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/locationTextView"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,6 +76,8 @@
             android:layout_width="278dp"
             android:layout_height="27dp"
             android:text="@string/name"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
