--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,8 +25,8 @@
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/to_right" />
         <action
-            android:id="@+id/action_allLocationsFragments_to_StartNav"
-            app:destination="@id/StartNav"
+            android:id="@+id/action_allLocationsFragments_to_Nav"
+            app:destination="@id/Nav"
             app:enterAnim="@anim/from_left"
             app:exitAnim="@anim/to_right"
             app:popEnterAnim="@anim/from_left"
@@ -62,6 +62,16 @@
             app:popExitAnim="@anim/to_up"
             app:popUpTo="@id/addItemFragment"
             app:popUpToInclusive="false" />
+        <action
+            android:id="@+id/action_addLocationFragment_to_mapFragment"
+            app:destination="@id/Map"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/to_left"
+            app:popExitAnim="@anim/to_left"
+            app:popUpTo="@id/Map"
+            app:popUpToInclusive="false" />
+
     </fragment>
     <fragment
         android:id="@+id/detailLocationInfo"
@@ -85,84 +95,16 @@
         android:label="HomePageFragment"
         tools:layout="@layout/home_page">
         <action
-            android:id="@+id/action_homePage_to_loginFragment"
-            app:destination="@id/Login"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left"
-            app:popUpTo="@id/homePage"
-            app:popUpToInclusive="true"/>
-        <action
-            android:id="@+id/action_homePage_to_Register"
-            app:destination="@id/Register"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left"
-            app:popUpTo="@id/homePage"
-            app:popUpToInclusive="true"/>
-        <action
             android:id="@+id/action_homePage_to_Nav"
-            app:destination="@id/Nav" />
-    </fragment>
-    <fragment
-        android:id="@+id/Login"
-        android:name="com.example.arnavigationapp.ui.ui_activity.LoginFragment"
-        android:label="LoginFragment"
-        tools:layout="@layout/login_fragment">
-        <action
-            android:id="@+id/action_loginFragment_to_homePage"
-            app:destination="@id/homePage"
-            app:enterAnim="@anim/from_left"
-            app:exitAnim="@anim/to_right"
-            app:popEnterAnim="@anim/to_right"
-            app:popExitAnim="@anim/to_right"
-             />
-        <action
-            android:id="@+id/action_LoginFragment_to_Register"
-            app:destination="@id/Register"
-            app:enterAnim="@anim/from_down"
-            app:exitAnim="@anim/to_up"
-            app:popEnterAnim="@anim/to_up"
-            app:popExitAnim="@anim/to_up"/>
-
-        <action
-            android:id="@+id/action_LoginFragment_to_Nav"
             app:destination="@id/Nav"
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left" />
+            app:popExitAnim="@anim/to_left"
+            app:popUpTo="@id/homePage"
+            app:popUpToInclusive="true"/>
     </fragment>
-    <fragment
-        android:id="@+id/Register"
-        android:name="com.example.arnavigationapp.ui.ui_activity.RegisterFragment"
-        android:label="RegisterFragment"
-        tools:layout="@layout/register_fragment">
-        <action
-            android:id="@+id/action_RegisterFragment_to_LoginFragment"
-            app:destination="@id/Login"
-            app:enterAnim="@anim/from_up"
-            app:exitAnim="@anim/to_down"
-            app:popEnterAnim="@anim/to_down"
-            app:popExitAnim="@anim/to_down" />
 
-        <action
-            android:id="@+id/action_RegisterFragment_to_homePage"
-            app:destination="@id/homePage"
-            app:enterAnim="@anim/from_left"
-            app:exitAnim="@anim/to_right"
-            app:popEnterAnim="@anim/to_right"
-            app:popExitAnim="@anim/to_right" />
-        <action
-            android:id="@+id/action_RegisterFragment_to_Nav"
-            app:destination="@id/Nav"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left" />
-    </fragment>
     <fragment
         android:id="@+id/Nav"
         android:name="com.example.arnavigationapp.ui.ui_activity.NavigationFragment"
@@ -176,29 +118,36 @@
             app:popEnterAnim="@anim/to_left"
             app:popExitAnim="@anim/to_left" />
         <action
-            android:id="@+id/action_Nav_to_StartNav"
-            app:destination="@id/StartNav"
+            android:id="@+id/action_Nav_to_Map"
+            app:destination="@id/Map"
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/to_left"
             app:popExitAnim="@anim/to_left" />
         <action
+            android:id="@+id/action_Nav_to_allLocationsFragments"
+            app:destination="@id/allLocationsFragments"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/to_left"
+            app:popExitAnim="@anim/to_left" />
+
+        <action
             android:id="@+id/action_Nav_to_addItemFragment"
             app:destination="@id/addItemFragment"
-            app:enterAnim="@anim/from_up"
-            app:exitAnim="@anim/to_down"
-            app:popEnterAnim="@anim/to_down"
-            app:popExitAnim="@anim/to_down"
-            app:popUpTo="@id/StartNav"
-            app:popUpToInclusive="true"/>
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_right"
+            app:popExitAnim="@anim/to_left" />
 
         <action
             android:id="@+id/action_Nav_to_homepage"
             app:destination="@id/homePage"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
             app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left" />
+            app:popExitAnim="@anim/to_right"/>
+
     </fragment>
     <fragment
         android:id="@+id/News"
@@ -215,54 +164,34 @@
             app:popUpTo="@id/Nav"
             app:popUpToInclusive="true"/>
     </fragment>
-    <fragment
-        android:id="@+id/StartNav"
-        android:name="com.example.arnavigationapp.ui.ui_activity.StartNavFragment"
-        android:label="StartNavFragment"
-        tools:layout="@layout/start_nav_fragment">
-        <action
-            android:id="@+id/action_StartNav_to_Nav"
-            app:destination="@id/Nav"
-            app:enterAnim="@anim/from_left"
-            app:exitAnim="@anim/to_right"
-            app:popEnterAnim="@anim/to_right"
-            app:popExitAnim="@anim/to_right"
-            app:popUpTo="@id/Nav"
-            app:popUpToInclusive="true" />
-        <action
-            android:id="@+id/action_StartNav_to_Map"
-            app:destination="@id/Map"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left" />
-        <action
-            android:id="@+id/action_StartNav_to_allLocationsFragments"
-            app:destination="@id/allLocationsFragments"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left" />
-    </fragment>
+
     <fragment
         android:id="@+id/Map"
         android:name="com.example.arnavigationapp.ui.ui_activity.MapFragment"
         android:label="Map"
         tools:layout="@layout/map_fragment">
         <action
-            android:id="@+id/action_Map_to_StartNav"
-            app:destination="@id/StartNav"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left" />
+            android:id="@+id/action_Map_to_Nav"
+            app:destination="@id/Nav"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right"/>
         <action
             android:id="@+id/action_MapFragment_to_AR"
             app:destination="@id/AR"
+            app:enterAnim="@anim/to_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/to_right"
+            app:popExitAnim="@anim/to_left" />
+
+        <action
+            android:id="@+id/action_MapFragment_to_addLocationFragment"
+            app:destination="@id/addItemFragment"
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/to_left"
-            app:popExitAnim="@anim/to_left" />
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
     </fragment>
     <fragment
         android:id="@+id/AR"
@@ -270,8 +199,8 @@
         android:label="AR"
         tools:layout="@layout/start_ar_fragment">
         <action
-            android:id="@+id/action_AR_to_StartNav"
-            app:destination="@id/StartNav"
+            android:id="@+id/action_AR_to_Nav"
+            app:destination="@id/Nav"
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/to_left"
