--- a/app/src/main/res/layout/all_locations_layout.xml
+++ b/app/src/main/res/layout/all_locations_layout.xml
@@ -56,6 +56,8 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/search"
                 android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 app:boxStrokeColor="@color/gray"
                 app:hintTextColor="@color/gray"
                 app:cursorColor="@color/gray"
