fixed navigation bug

--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -103,7 +103,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/sign_in"
                         android:textColor="@color/black"
-                        android:textSize="40sp"
+                        android:textSize="25sp"
                         android:textStyle="italic"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -285,7 +285,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/register"
                         android:textColor="@color/black"
-                        android:textSize="40sp"
+                        android:textSize="25sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -296,6 +296,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="50dp"
+                        android:paddingBottom="15dp"
                         android:text="@string/invalid_email_or_password_please_use_an_existing_email_and_a_password_of_at_least_6_characters"
                         android:textColor="@color/red"
                         android:visibility="gone"
@@ -452,7 +453,7 @@
                 android:layout_marginTop="10dp"
                 android:contentDescription="hit logo"
                 android:scaleType="centerCrop"
-                android:src="@drawable/hitlogo"
+                android:src="@drawable/nobackgroundhitlogo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
