--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -28,6 +28,7 @@
         android:hint="@string/please_choose_where_to_add_a_location"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColorHint="@color/white"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,6 +44,7 @@
         android:hint="@string/please_choose_a_place_to_navigate"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColorHint="@color/white"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
