--- a/app/src/main/res/layout/navigation_fragment.xml
+++ b/app/src/main/res/layout/navigation_fragment.xml
@@ -93,7 +93,7 @@
                 android:layout_marginBottom="28dp"
                 android:contentDescription="hit logo"
                 android:scaleType="centerCrop"
-                android:src="@drawable/hitlogo"
+                android:src="@drawable/nobackgroundhitlogo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
