--- a/app/src/main/res/layout/all_locations_layout.xml
+++ b/app/src/main/res/layout/all_locations_layout.xml
@@ -20,24 +20,18 @@
             android:layout_width="match_parent">
 
 
-            <androidx.cardview.widget.CardView
+            <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="120dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="15dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="124dp"
+                android:layout_height="81dp"
+                android:layout_marginBottom="632dp"
+                android:contentDescription="hit logo"
+                android:scaleType="centerCrop"
+                android:src="@drawable/nobackgroundhitlogo"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:cardCornerRadius="15dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/hitlogo"
-                    android:scaleType="centerCrop" />
-
-            </androidx.cardview.widget.CardView>
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/btn_back"
@@ -56,8 +50,9 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/search"
                 android:layout_marginTop="10dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 app:boxStrokeColor="@color/gray"
                 app:hintTextColor="@color/gray"
                 app:cursorColor="@color/gray"
@@ -75,6 +70,9 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/searchEditTextLayout"
