--- a/app/src/main/res/layout/detail_location_info.xml
+++ b/app/src/main/res/layout/detail_location_info.xml
@@ -26,18 +26,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <TextView
             android:id="@+id/location_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:text="@string/name"
             android:textColor="@color/gray"
             android:textSize="30sp"
+            app:layout_constraintBottom_toTopOf="@+id/item_detail_image"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.394" />
 
         <TextView
             android:id="@+id/location_location"
@@ -47,18 +49,21 @@
             android:text="@string/coordinates"
             android:textColor="@color/gray"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/item_detail_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/location_name" />
+            app:layout_constraintTop_toBottomOf="@id/location_name"
+            app:layout_constraintVertical_bias="0.178" />
 
         <TextView
             android:id="@+id/location_azimuth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginBottom="10dp"
             android:text="@string/azimuth"
             android:textColor="@color/gray"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/item_detail_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/location_location" />
